Increase memory for cobertura